# ocr-python-gui-20260220

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_exe.py  ocr_app.spec  pyproject.toml  release.bat  requirements.txt
.github/workflows/: release.yml
.specify/memory/: constitution.md
specs/001-ocr-gui-app/: spec.md
specs/001-ocr-gui-app/checklists/: requirements.md
specs/002-ocr-file-clipboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ocr-file-clipboard/checklists/: requirements.md
specs/002-ocr-file-clipboard/contracts/: module-interfaces.md
src/: main.py  models.py
src/file_io/: image_loader.py  text_exporter.py
src/gui/: main_window.py
src/ocr_engine/: engine.py
tests/unit/: test_file_io.py  test_models.py  test_ocr_engine.py
